# home-assistant-optoma-projector

./: .git-blame-ignore-revs  .gitignore  README.md  activate  hacs.json  include.sh  lint  pyproject.toml  typecheck
.autogen.d/: README.md
.githooks/: README.md
custom_components/optoma_projector/: __init__.py  button.py  config_flow.py  const.py  helpers.py  manifest.json  media_player.py  number.py  select.py  strings.json  switch.py
custom_components/optoma_projector/translations/: en.json
