[tool.poetry]
name = "home-assistant-optoma-projector"
version = "0.1.0"
description = "Optoma Projector Integration for Home Assistant"
authors = ["Will Rouesnel <wrouesnel@wrouesnel.com>"]
repository = "https://github.com/wrouesnel/home-assistant-optoma-projector"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
optoma-web-api = {git = "https://github.com/wrouesnel/optoma-web-api.git@v0.1.0"}
#optoma-web-api = {path = "../optoma-web-api", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.13.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
refurb = "^1.25.0"
pytest-cov = "^4.1.0"
pytest-homeassistant-custom-component = "^0.13.84"
homeassistant = "^2023.12.1"

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components", "tests" , "homeassistant"]
forced_separate = "tests"
combine_as_imports = true

[tool.mypy]
pretty = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov custom_components.optoma"
console_output_style = "count"
timeout = "9"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
